[package]
name = "file_db"
version = "0.1.0"
authors = ["Phaiax <phaiax-git@invisibletower.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1.0", features = ["unstable", "attributes"] }
futures01 = { package = "futures", version = "0.1" }
futures = { version = "0.3", features = ["compat"] }
futures-cpupool = "0.1"
failure = "*"
log = "0.4"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = "1.0.24"
serde_derive = "1.0.24"
rmp-serde = "1.3"
libc = "0.2"
typemap = "0.3.3"
