[package]
name = "server"
version = "0.1.0"
authors = ["pi"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-serial = "0.6"
tokio-signal = "0.1"
hyper = "0.11"
failure = "*"
lazy_static = "1.0"
log = "0.3"
env_logger = "0.4.3"
chrono = "0.4"