[package]
name = "server"
version = "0.1.0"
authors = ["pi"]

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-serial = "0.6"
tokio-signal = "0.1"
tokio-inotify = "0.3.0"
hyper = "0.11"
failure = "*"
lazy_static = "1.0"
log = "0.3"
env_logger = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.10.0"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0"
rmp-serde = "0.13.7"
regex = "0.2"
libc = "0.2"
handlebars = "0.29"
file_db = { path = "../file_db" }